# currencyapi-rs

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  utils.rs
src/api/: mod.rs
src/models/: mod.rs
