[package]
name = "currencyapi-rs"
description = "An api wrapper for currencyapi.com"
homepage = "https://github.com/everapihq/currencyapi-rs"
repository = "https://github.com/everapihq/currencyapi-rs"
documentation = "https://currencyapi.com/docs"
license = "MIT"
version = "0.1.1"
edition = "2021"

[dependencies]
thiserror = "1.0.68"
serde_json = "1.0.132"

[dependencies.serde]
version = "1.0.214"
features = ["derive"]

[dependencies.strum]
version = "0.26.3"
features = ["derive"]

[dependencies.reqwest]
version = "0.12.9"
default-features = false
features = ["rustls-tls"]

[dev-dependencies.tokio]
version = "1.41.0"
features = ["rt", "macros"]
