[package]
name = "currencyapi-rs"
description = "An api wrapper for currencyapi.com"
homepage = "https://github.com/everapihq/currencyapi-rs"
repository = "https://github.com/everapihq/currencyapi-rs"
documentation = "https://currencyapi.com/docs"
license = "MIT"
version = "0.1.2"
edition = "2021"

[dependencies]
thiserror = "2.0.12"
serde_json = "1.0.140"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.strum]
version = "0.27.1"
features = ["derive"]

[dependencies.reqwest]
version = "0.12.15"
default-features = false
features = ["rustls-tls", "json"]

[dev-dependencies.tokio]
version = "1.44.2"
features = ["rt", "macros"]
