[package]
name = "currencyapi-rs"
description = "An api wrapper for currencyapi.com"
homepage = "https://github.com/everapihq/currencyapi-rs"
repository = "https://github.com/everapihq/currencyapi-rs"
documentation = "https://currencyapi.com/docs"
license = "MIT"
version = "0.1.2"
edition = "2021"

[dependencies]
thiserror = "2.0.14"
serde_json = "1.0.142"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.strum]
version = "0.27.2"
features = ["derive"]

[dependencies.reqwest]
version = "0.12.23"
default-features = false
features = ["rustls-tls", "json"]

[dev-dependencies.tokio]
version = "1.47.1"
features = ["rt", "macros"]
